--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2>Los mejores mobiliarios para tu evento.</h2>
         <div class="box">
             <a class="button" href="#popup1">Ver Stock</a>
-        </div>   
+        </div>
         <div id="popup1" class="overlay">
             <div class="popup">
                 <h2>El stock disponible es:</h2>
@@ -39,22 +39,22 @@
     </header>
     <main>
         <div id="div1" class="divMain">
-            <img src="puff.jpg" alt="">
+            <img src="puff.jpg" alt="puff">
             <br>
             <input type="text" placeholder="Cantidad de puffs" id="pc">
         </div>
         <div id="div2" class="divMain">
-            <img src="mesa.jpg" alt="">
+            <img src="mesa.jpg" alt="mesas">
             <br>
             <input type="text" placeholder="Cantidad de mesas" id="mc">
         </div>
         <div id="div3" class="divMain">
-            <img src="trono.jpg" alt="">
+            <img src="trono.jpg" alt="trono">
             <br>
             <input type="text" placeholder="Cantidad de tronos" id="tc">
         </div>
         <div id="div4" class="divMain">
-            <img src="gazebo.jpg" alt="">
+            <img src="gazebo.jpg" alt="gazebo">
             <br>
             <input type="text" placeholder="Cantidad de gazebos" id="gc">
         </div>
@@ -62,8 +62,10 @@
     <div id="impresion">
         <button id="resultados">MOSTRAR RESULTADOS</button>
     </div>
-    
+
+    <script src="jquery-3.5.1.min.js"></script>
     <script src="Entrega10.js"></script>
+
 </body>
 
 </html>
